@@ -18,6 +18,7 @@
    * this/super literal expressions.
    * cast expression.
    * new expression.
+ * Fixed issue #9: Control-click opens up new editor everytime
 
 == DDT 0.8.0 (2013-08-30) ==
  * Updated DDT to latest version of DLTK (version 5.0, from Eclipse Kepler).
